# .github

./: .gitignore  AGENTS.md  APPLE-CHAIRPERSON.md  BANKING-HSBC-P2P.md  BANKING-HSBC.md  BRAND.md  BRMSTE-DIAMONDS.md  BRMSTE-META.md  BRMSTE-OPEN-GITS-AUDIT.md  BRMSTE-THREE-CRYPTOS.md  CARBON-JUSTICE.md  COMPANIES-HOUSE-PORTFOLIO.md  DEPLOY-COMING-SOON.md  DEPLOY-IBM-QUANTUM.md  DEPLOY-VERCEL.md  DEPLOY.md  FULL-SOCIAL-BROADCAST.md  GLASS-MIRRORS-BROADCAST.md  GLOBAL-SHRAVAN-BANSAL-BRAND.md  IP-VALUATION.md  JULIAN-KUSCHNER-FOLLOW-UP.md  LIGHTNING-BRAND.md  META-FULL-STOP.md  META-IS-DEAD-ITS-ALL-REAL.md  NETWORKS.md  NEURAL.md  OKTA-OIDC.md  OPEN-SOFTWARE.md  PATENT-NOTICE-TEMPLATE.md  PATENT-NOTICE.md  PAYMENTS-RAILS.md  PORTFOLIO-ASSET-CLASSES.md  PRESS.md  PROJECT-GLASSWING.md  QUANTUM-USDC-KITS.md  RE-TYRE.md  README.md  SECURITY.md  SETUP-BRMSTE.md  SHRAVAN-BANSAL-FOR-PM-UK.md  (+9 more)
.cursor/: mcp.json.example
app/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json
brmste-brm-api/: README.md  main.py
coming-soon/: THEME-SOURCE.md  package-lock.json  package.json  wrangler.toml
compare/: README.md  index.html
config/: ONE_TREZOR.json
convex/: schema.ts  tyreJobActions.ts  (+2 more)
convex-quickstart/: README.md  index.html  package-lock.json  package.json
meeting-intelligence/: README.md  pyproject.toml
meeting-intelligence/src/meeting_intelligence/: __init__.py  analyzer.py  cli.py  models.py  renderers.py  transcript.py
meeting-intelligence/tests/: test_analyzer.py  test_cli.py  test_models.py  test_renderers.py  test_transcript.py
(+774 files in other folders)
